# task_appender

./: .gitignore  AGENTS.md  README.md  RELEASE_NOTES.md  TASK_INBOX.md  USAGE.md  WORK_MIRROR.md  pyproject.toml  start_ui.sh  task_appender.py
data/: tasks.yaml
docs/superpowers/plans/: 2026-06-20-notification-reminders.md
exports/: graph.dot  graph.html  graph.mmd  scoreboard.html  tasks.md
harness/: run_harness.py  scenarios.yaml
scripts/: notification-agent.applescript
taskmgr/: __init__.py  analytics.py  cli.py  errors.py  graph.py  model.py  notifier.py  recurrence.py  reminder_rules.py  reminders.py  render.py  server.py  settings.py  store.py
tests/: test_analytics.py  test_cli.py  test_graph.py  test_model.py  test_notifier.py  test_recurrence.py  test_reminders.py  test_settings.py
